[gd_scene load_steps=2 format=3 uid="uid://cw1d7jjf6gjfu"]

[ext_resource type="Script" uid="uid://cf5dys0neb848" path="res://tutorial_popup.gd" id="1_l5emp"]

[node name="TutorialPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5emp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.00392157)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Controls"

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="WASDLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "üéÆ WASD - Move"

[node name="SpaceLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è SPACE - Attack"

[node name="ELabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "üîß E - Interact"

[node name="LetsGoButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Let's Go! üöÄ"

[connection signal="pressed" from="Panel/VBoxContainer/LetsGoButton" to="." method="_on_lets_go_button_pressed"]
